<resources>
    <string name="app_name">Probation</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="current_question">No current question</string>
    <string name="potential_answer">\?</string>
    <string name="trivia_current_score">Current Score: 0/0</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="prompt_username">USERNAME</string>
    <string name="action_register">Register</string>
    <string name="questions_remaining">Questions Left:</string>
    <string name="title_activity_trivia_game_selection_screen">TriviaGameSelectionScreenActivity
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
